fix: bg image cutoff when content overflows

--- a/public/assets/scss/_mixins.scss
+++ b/public/assets/scss/_mixins.scss
@@ -45,9 +45,6 @@
     $n: strip-unit($font-size);
     font-size: $n * 3.5vw;
     @include media-breakpoint-up($breakpoint) {
-        font-size: $n * 3vw;
-    }
-    @include media-breakpoint-up($breakpoint) {
         font-size: $font-size;
     }
 }
